--- a/portfolio.html
+++ b/portfolio.html
@@ -90,6 +90,29 @@
       </div>
     </section>
 
+    <!-- Education Section -->
+    <section class="education section">
+      <h2>Education</h2>
+      <div class="education-container">
+        <div class="education-card">
+          <h3>Bachelor's in Computer Science</h3>
+          <span class="edu-duration">2017 - 2021</span>
+          <p>XYZ University, City, Country</p>
+          <p>
+            Graduated with a strong foundation in web development, algorithms, and software engineering principles. Learned how to work in collaborative environments and manage projects from start to finish.
+          </p>
+        </div>
+        <div class="education-card">
+          <h3>Frontend Web Development Bootcamp</h3>
+          <span class="edu-duration">2019</span>
+          <p>ABC Coding Academy</p>
+          <p>
+            Completed an intensive bootcamp focused on JavaScript, HTML, CSS, and responsive web design. Gained hands-on experience building real-world projects.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <!-- Projects Section -->
     <section class="projects section">
       <h2>Projects</h2>
@@ -109,6 +132,29 @@
           <a href="#" target="_blank" class="view-project">View Project</a>
         </div>
         <!-- Add more project cards as needed -->
+      </div>
+    </section>
+
+    <!-- Blog Section -->
+    <section class="blog section">
+      <h2>Blog</h2>
+      <div class="blog-container">
+        <div class="blog-card">
+          <h3>How to Get Started with React</h3>
+          <span class="blog-date">March 1, 2025</span>
+          <p>
+            A beginner-friendly guide to building your first React app. Learn the fundamentals of React and how to use hooks to manage state.
+          </p>
+          <a href="https://bus-army-dude.github.io/blog/react-beginner-guide" target="_blank" class="read-more">Read More</a>
+        </div>
+        <div class="blog-card">
+          <h3>10 Tips for Writing Clean Code</h3>
+          <span class="blog-date">February 15, 2025</span>
+          <p>
+            Writing clean, maintainable code is crucial for long-term project success. Here are 10 tips to make your codebase easier to read and maintain.
+          </p>
+          <a href="https://bus-army-dude.github.io/blog/clean-code-tips" target="_blank" class="read-more">Read More</a>
+        </div>
       </div>
     </section>
 
