--- a/portfolio.html
+++ b/portfolio.html
@@ -48,9 +48,10 @@
     <section class="about-me section">
       <h2>About Me</h2>
       <p>
-        Hey, I'm Bus Army Dude – a creative web developer and tech enthusiast.
-        I build modern, responsive websites and web apps that push boundaries.
-        I love clean code, innovative design, and tackling new challenges.
+        Certified computer technician with a passion for repair, including both software and hardware
+        troubleshooting. Interest in Apple products, Windows and Mac operating systems. Proven
+        excellence in customer service. Establishes strong working relationships with co-workers to
+        achieve ultimate productivity.
       </p>
     </section>
 
@@ -61,8 +62,6 @@
         <div class="skill-card">HTML</div>
         <div class="skill-card">CSS</div>
         <div class="skill-card">JavaScript</div>
-        <div class="skill-card">React</div>
-        <div class="skill-card">Node.js</div>
         <div class="skill-card">Git & GitHub</div>
         <div class="skill-card">Responsive Design</div>
         <div class="skill-card">UI/UX Design</div>
@@ -95,19 +94,19 @@
       <h2>Education</h2>
       <div class="education-container">
         <div class="education-card">
-          <h3>Bachelor's in Computer Science</h3>
-          <span class="edu-duration">2017 - 2021</span>
-          <p>XYZ University, City, Country</p>
+          <h3>Elmwood High School</h3>
+          <span class="edu-duration">Nov 2022 - Jun 2024</span>
+          <p>Bloomdale, OH</p>
           <p>
-            Graduated with a strong foundation in web development, algorithms, and software engineering principles. Learned how to work in collaborative environments and manage projects from start to finish.
+            Graduated with my High School Diploma
           </p>
         </div>
         <div class="education-card">
-          <h3>Frontend Web Development Bootcamp</h3>
-          <span class="edu-duration">2019</span>
-          <p>ABC Coding Academy</p>
+          <h3>Penta Career Center | Information Technology Academy</h3>
+          <span class="edu-duration">Aug 2021 - May 2024</span>
+          <p>Perrysburg, OH</p>
           <p>
-            Completed an intensive bootcamp focused on JavaScript, HTML, CSS, and responsive web design. Gained hands-on experience building real-world projects.
+            Honor Roll Fall 2022 - Spring 2023 Earned 6 college credits in computer hardware and programming
           </p>
         </div>
       </div>
