--- a/settings.html
+++ b/settings.html
@@ -78,6 +78,19 @@
                 </div>
             </div>
 
+
+            <!-- Disable Animations -->
+            <div class="setting-card">
+                <div class="setting-label">
+                    <h3 class="setting-title">Disable Animations</h3>
+                    <p class="setting-description">Disable animations when hovering over buttons and content for improved accessibility</p>
+                </div>
+                <label for="animationsToggle" class="toggle-switch" aria-label="Toggle animations">
+                    <input type="checkbox" id="animationsToggle">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+            
             <!-- Owner Only Settings Section -->
             <div class="settings-subsection owner-only">
                 <h2 class="subsection-title">Owner Only Settings</h2>
