--- a/merchandise.html
+++ b/merchandise.html
@@ -17,7 +17,7 @@
       gtag('js', new Date());
       gtag('config', 'G-E0RSQS1MS7');
     </script>
-
+    
     <link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="images/android-icon-192x192.png" />
@@ -30,6 +30,22 @@
     <meta name="theme-color" content="#ffffff"/>
 </head>
 <body>
+
+<!-- Maintenance Mode Message -->
+<div id="maintenanceModeMessage" style="display: none; background-color: red; color: white; text-align: center; padding: 20px;">
+    <h2>We're Performing Some Upgrades!</h2>
+    <p>
+        Our website is currently undergoing scheduled maintenance to improve your experience. We’re making some big updates, so things will be smoother, faster, and even better when we're done.
+    </p>
+    <p>
+        During this time, certain features may be temporarily unavailable, and you might not be able to access all parts of the site. But don’t worry, we’re working hard to get everything back up and running as quickly as possible.
+    </p>
+    <p>
+        Please check back soon, or follow our social media pages for updates on when we’ll be live again. We appreciate your patience and can’t wait to show you what’s new!
+    </p>
+    <p><strong>Thank you for your understanding!</strong></p>
+</div>
+    
     <!-- Header Section -->
     <header>
         <div class="header-content">
