--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="ai-features.css">
     <link rel="stylesheet" href="settings.css">
+    <link rel="stylesheet" href="colorblind-modes.css">
     
     <!-- Font Awesome CDN -->
     <script src="https://kit.fontawesome.com/ffa5e5607e.js" crossorigin="anonymous"></script>
