--- a/merchandise.html
+++ b/merchandise.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="ai-features.css">
     <link rel="stylesheet" href="settings.css">
     <link rel="stylesheet" href="merchandise.css">
+    <link rel="stylesheet" href="colorblind-modes.css">
     <meta http-equiv="refresh" content="300">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
