--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="ai-features.css">
     <link rel="stylesheet" href="settings.css">
+    <link rel="stylesheet" href="colorblind-modes.css">
     <meta http-equiv="refresh" content="300">
     
     <!-- Google tag (gtag.js) -->
