--- a/index.html
+++ b/index.html
@@ -717,5 +717,6 @@
     <script src="version.js"></script>
     <script src="device.js"></script>
     <script src="creatorshoutouts.js"></script>
+    <script src="ai-chatbot.js"></script>
 </body>
 </html>                
