--- a/merchandise.html
+++ b/merchandise.html
@@ -81,5 +81,6 @@
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
     <script src="merchandise.js"></script> <!-- This will handle product/category logic -->
+    <script src="ai-chatbot.js"></script>
 </body>
 </html>
