--- a/settings.html
+++ b/settings.html
@@ -145,5 +145,6 @@
     <script src="common.js"></script>
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
+    <script src="ai-chatbot.js"></script>
 </body>
 </html>
