--- a/accessibility-statement.html
+++ b/accessibility-statement.html
@@ -75,5 +75,6 @@
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
     <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
+    <script src="ai-chatbot.js"></script>
 </body>
 </html>
