--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -73,5 +73,6 @@
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
     <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
+    <script src="ai-chatbot.js"></script>
 </body>
 </html>
