--- a/index.html
+++ b/index.html
@@ -385,29 +385,6 @@
             </div>
         </div>
 
-        <!-- AFO Journey -->
-        <div class="faq-item">
-            <button class="faq-question">
-                Tell me about your AFO journey
-                <span class="faq-icon">+</span>
-            </button>
-            <div class="faq-answer">
-                <p>My AFO Journey Timeline:</p>
-                <ul>
-                    <li>Starting Date: January 31st, 2025 (Friday)</li>
-                    <li>Documentation Plans:
-                        <ul>
-                            <li>Daily updates</li>
-                            <li>Progress tracking</li>
-                            <li>Experience sharing</li>
-                            <li>Q&A sessions</li>
-                        </ul>
-                    </li>
-                </ul>
-                <p>Follow now to join from the beginning of this journey!</p>
-            </div>
-        </div>
-
         <!-- Gaming Specifics -->
         <div class="faq-item">
             <button class="faq-question">
@@ -457,18 +434,18 @@
                 <ul>
                     <li>Repository Information:
                         <ul>
-                            <li>Owner: BusArmyDude</li>
+                            <li>Owner: Bus Army Dude</li>
                             <li>Description: A link in bio for social media accounts</li>
                         </ul>
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (41.1%)</li>
-                            <li>CSS (29.9%)</li>
-                            <li>HTML (29.0%)</li>
+                            <li>JavaScript (43.2%)</li>
+                            <li>CSS (29.8%)</li>
+                            <li>HTML (27.0%)</li>
                         </ul>
                     </li>
-                    <li>Last Updated: February 26th, 2025 7:25:14 PM EST</li>
+                    <li>Last Updated: March 3th, 2025 11:26:37 AM EST</li>
                 </ul>
             </div>
         </div>
@@ -620,7 +597,7 @@
             <div class="battery-level" style="width: 100%;"></div>
             <div class="battery-percentage">100%</div>
         </div>
-        <p><span>Battery Charge Cycles:</span> 169</p>
+        <p><span>Battery Charge Cycles:</span> 172</p>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
