--- a/index.html
+++ b/index.html
@@ -589,13 +589,13 @@ s0.parentNode.insertBefore(s1,s0);
         <p><span>Price:</span> $1,067.49</p>
         <p><span>Date Released:</span> September 20, 2024</p>
         <p><span>Date Bought:</span> November 08, 2024</p>
-        <p><span>OS Version:</span> iOS 18.4 (22E5200s)</p>
+        <p><span>OS Version:</span> iOS 18.4 (22E5216h)</p>
         <p><span>Battery Health:</span></p>
         <div class="battery-icon">
             <div class="battery-level" style="width: 100%;"></div>
             <div class="battery-percentage">100%</div>
         </div>
-        <p><span>Battery Charge Cycles:</span> 172</p>
+        <p><span>Battery Charge Cycles:</span> 177</p>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
@@ -609,7 +609,7 @@ s0.parentNode.insertBefore(s1,s0);
         <p><span>Price:</span> $853.98</p>
         <p><span>Date Released:</span> September 22, 2023</p>
         <p><span>Date Bought:</span> May 17, 2024</p>
-        <p><span>OS Version:</span> WatchOS 11.4 (22T5212I)</p>
+        <p><span>OS Version:</span> WatchOS 11.4 (22T5228e)</p>
         <p><span>Battery Health:</span></p>
         <div class="battery-icon">
             <div class="battery-level" style="width: 97%;"></div>
@@ -627,7 +627,7 @@ s0.parentNode.insertBefore(s1,s0);
         <p><span>Price:</span> $742.29</p>
         <p><span>Date Released:</span> January 17, 2023</p>
         <p><span>Date Bought:</span> May 16, 2024</p>
-        <p><span>OS Version:</span> macOS Sequoia 15.4 Beta (24E5206s)</p>
+        <p><span>OS Version:</span> macOS Sequoia 15.4 Beta (24E5222f)</p>
     </div>
 </div>
 
