--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@ s0.parentNode.insertBefore(s1,s0);
             <a href="https://riverkritzar-shop.fourthwall.com/" target="_blank" class="link-button">Merch Store (Fourthwall)</a>
             <a href="https://discord.gg/NjMtuZYc52" target="_blank" class="link-button">Join the Bus Army Dude's Community Discord Server!</a>
             <a href="https://bus-army-dude.instatus.com/" target="_blank" class="link-button">Bus Army Dude's Website Status Page</a>
+            <a href="https://busarmydude.tawk.help/" target="_blank" class="link-button">Bus Army Dude's Knowledge Portal</a>
         </div>
     </div>
 
