--- a/index.html
+++ b/index.html
@@ -226,6 +226,24 @@ s0.parentNode.insertBefore(s1,s0);
             <h2>Countdown to Spring 2025!</h2>
             <div class="countdown-container">
                 <div class="countdown-block">
+                    <div id="countdown-years" class="flip-clock">
+                        <div class="flip-clock-inner">
+                            <div class="flip-clock-front">00</div>
+                            <div class="flip-clock-back">00</div>
+                        </div>
+                    </div>
+                    <div class="countdown-label">Years</div>
+                </div>
+                <div class="countdown-block">
+                    <div id="countdown-months" class="flip-clock">
+                        <div class="flip-clock-inner">
+                            <div class="flip-clock-front">00</div>
+                            <div class="flip-clock-back">00</div>
+                        </div>
+                    </div>
+                    <div class="countdown-label">Months</div>
+                </div>
+                <div class="countdown-block">
                     <div id="countdown-days" class="flip-clock">
                         <div class="flip-clock-inner">
                             <div class="flip-clock-front">00</div>
