--- a/index.html
+++ b/index.html
@@ -223,64 +223,79 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Countdown Section -->
         <div class="countdown-section">
-            <h2>Countdown to Spring 2025!</h2>
-            <div class="countdown-container">
-                <div class="countdown-block">
-                    <div id="countdown-years" class="flip-clock">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
-                    </div>
-                    <div class="countdown-label">Years</div>
-                </div>
-                <div class="countdown-block">
-                    <div id="countdown-months" class="flip-clock">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
-                    </div>
-                    <div class="countdown-label">Months</div>
-                </div>
-                <div class="countdown-block">
-                    <div id="countdown-days" class="flip-clock">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
-                    </div>
-                    <div class="countdown-label">Days</div>
-                </div>
-                <div class="countdown-block">
-                    <div id="countdown-hours" class="flip-clock">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
-                    </div>
-                    <div class="countdown-label">Hours</div>
-                </div>
-                <div class="countdown-block">
-                    <div id="countdown-minutes" class="flip-clock">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
-                    </div>
-                    <div class="countdown-label">Minutes</div>
-                </div>
-                <div class="countdown-block">
-                    <div id="countdown-seconds" class="flip-clock">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
-                    </div>
-                    <div class="countdown-label">Seconds</div>
+    <h2>Countdown to Spring 2025!</h2>
+    <div class="countdown-container">
+        <div class="countdown-block">
+            <div id="countdown-years" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <!-- Top half and bottom half for the current value -->
+                    <div class="flip-clock-top">00</div>
+                    <div class="flip-clock-bottom">00</div>
+                    <!-- Front and back for the flip effect -->
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
                 </div>
             </div>
+            <div class="countdown-label">Years</div>
         </div>
+        <!-- Repeat the same structure for months, days, hours, minutes, and seconds -->
+        <div class="countdown-block">
+            <div id="countdown-months" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-top">00</div>
+                    <div class="flip-clock-bottom">00</div>
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
+            <div class="countdown-label">Months</div>
+        </div>
+        <div class="countdown-block">
+            <div id="countdown-days" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-top">00</div>
+                    <div class="flip-clock-bottom">00</div>
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
+            <div class="countdown-label">Days</div>
+        </div>
+        <div class="countdown-block">
+            <div id="countdown-hours" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-top">00</div>
+                    <div class="flip-clock-bottom">00</div>
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
+            <div class="countdown-label">Hours</div>
+        </div>
+        <div class="countdown-block">
+            <div id="countdown-minutes" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-top">00</div>
+                    <div class="flip-clock-bottom">00</div>
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
+            <div class="countdown-label">Minutes</div>
+        </div>
+        <div class="countdown-block">
+            <div id="countdown-seconds" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-top">00</div>
+                    <div class="flip-clock-bottom">00</div>
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
+            <div class="countdown-label">Seconds</div>
+        </div>
+    </div>
+</div>
 
 <!-- Calendar Section -->
 <section class="section" data-section-id="events">
