--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ s0.parentNode.insertBefore(s1,s0);
             <i class="fab fa-youtube social-icon"></i>
             <span>YouTube</span>
         </a>
-        <a href="https://www.snapchat.com/add/riverkritzar" class="social-button">
+        <a href="https://www.snapchat.com/add/calebkritzar" class="social-button">
             <i class="fab fa-snapchat-ghost social-icon"></i>
             <span>Snapchat</span>
         </a>
